# Graphing-Calculator

./: CMakeLists.txt  OXOY.cpp  OXOY.h  README.md  algebraic.cpp  algebraic.h  app.cpp  app.h  appsettings.h  drawable.h  evaluate.cpp  evaluate.h  fonts.cpp  fonts.h  function.cpp  function.h  interface.cpp  interface.h  legenda.cpp  legenda.h  logarithmic.cpp  logarithmic.h  main.cpp  mixt.cpp  mixt.h  rpn.cpp  rpn.h  texts.cpp  texts.h  token.cpp  token.h  trigonometric.cpp  trigonometric.h  type_check.cpp  type_check.h  typecheck.cpp  typecheck.h  zoom.cpp  zoom.h
